@@ -1,6 +1,6 @@
 package com.axonivy.market.core.factory;
 
-import com.axonivy.market.core.comparator.MavenVersionComparator;
+import com.axonivy.market.core.comparator.LatestVersionComparator;
 import com.axonivy.market.core.enums.DevelopmentVersion;
 import com.axonivy.market.core.strategy.VersionMatchStrategy;
 import com.axonivy.market.core.utils.CoreVersionUtils;
@@ -28,14 +28,14 @@ public class CoreVersionFactory {
     if (releaseVersions == null || releaseVersions.isEmpty()) {
       return null;
     }
-    return releaseVersions.stream().filter(v -> MavenVersionComparator.compare(v, version) < 0).findFirst().orElse(
-        null);
+    return releaseVersions.stream().filter(v -> new LatestVersionComparator().compare(version, v) < 0).findFirst().orElse(
+      null);
   }
 
   public static String get(List<String> versions, String requestedVersion, VersionMatchStrategy matchStrategy) {
     var sortedVersions = Optional.ofNullable(versions).orElse(new ArrayList<>()).stream()
         .filter(Objects::nonNull)
-        .sorted((v1, v2) -> MavenVersionComparator.compare(v2, v1)).toList();
+        .sorted(new LatestVersionComparator()).toList();
 
     // Redirect to the newest version for special keywords
     var version = DevelopmentVersion.of(requestedVersion);
@@ -49,7 +49,7 @@ public class CoreVersionFactory {
     }
 
     if (version != null && !sortedVersions.isEmpty()) {
-      return sortedVersions.get(0);
+      return sortedVersions.getFirst();
     }
 
     // e.g. 10.0-dev
